# aloha

./: .gitignore  CMakeLists.txt  README.md  commands.txt  environment.yaml  package.xml  requirements.txt  setup.py
aloha/: constants.py  real_env.py  robot_utils.py
config/: aloha_mobile.yaml  aloha_remote.yaml  aloha_solo.yaml  aloha_static.yaml  base_joystick_teleop.yaml  leader_motor_specs.yaml  rs_cam.yaml  tasks_config.yaml
config/robot/: aloha_mobile.yaml  aloha_remote.yaml  aloha_shoot.yaml  aloha_solo.yaml  aloha_static.yaml  aloha_stationary.yaml
launch/: 4arms_teleop.launch  aloha_bringup.launch.py  aloha_bringup_mod.launch.py
scripts/: auto_record.sh  dual_side_teleop.py  one_side_teleop.py  record_episodes.py  replay_and_record_episodes.py  replay_episodes.py  sleep.py  visualize_episodes.py
scripts/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/aloha/: constants.py  real_env.py  robot_utils.py
