<?xml version="1.0"?>
<package format="2">
  <name>aloha</name>
  <version>0.0.0</version>
  <description>ALOHA: A Low-cost Open-source Hardware System for Bimanual Teleoperation</description>
  <maintainer email="tonyzhao@stanford.edu">Tony Zhao</maintainer>
  <license>BSD</license>
  <author email="tonyzhao@stanford.edu">Tony Zhao</author>

  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <build_depend>interbotix_ros_slate</build_depend>
  <build_depend>interbotix_xs_modules</build_depend>
  <build_depend>interbotix_xs_msgs</build_depend>
  <build_depend>interbotix_xsarm_control</build_depend>
  <build_depend>realsense2_camera</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>usb_cam</build_depend>

  <export>
  </export>
</package>
